fix: add hidden overflow-y to layout-content

--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -2,6 +2,7 @@
   padding: 16px 16px 0 16px;
   background: linear-gradient(#21ce99 1080px, white 20px);
   overflow-x: hidden !important;
+  overflow-y: hidden;
 }
 .circles-container {
   position: relative;
